# pyitau-browser

./: .gitignore  LICENSE  pyproject.toml  setup.py
pyitau_browser/: __init__.py  pyitau.py
